package com.bazar.app.enums;

public enum EstadoCliente {
  ACTIVO,
  INACTIVO,
  BLOQUEADO
}
