package com.bazar.app.enums;

public enum EstadoProducto {
  ACTIVO,
  INACTIVO,
  AGOTADO,
  DESCONTINUADO
}
