package com.bazar.app.enums;

public enum EstadoVenta {
  PENDIENTE,
  PAGADA,
  ENTREGADA,
  CANCELADA
}
